# python_hw_1-python_hw_1.py

./: Dockerfile  README.md  pyproject.toml  requirements.txt
python_hw_1/: __init__.py  python_hw_1.py
tests/: test_1.py  test_10.py  test_11.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py
