[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python_hw_1"
version = "0.1.0"
description = ""
authors = ["Viktor Tiulpin <viktor@tiulp.in>"]

[tool.poetry.dependencies]
python = "^3.8"
taskipy = "^1.6.0"

[tool.poetry.dev-dependencies]
flakehell = "^0.9.0"
flake8 = "^3.8.4"
pytest = "^6.2.2"

[tool.taskipy.tasks]
test = "pytest tests/test*.py"
lint = "flakehell lint"
docker = "docker build -t tiulpin/python-not-boring ."

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.flakehell]
application_import_names = ["task"]
exclude = [".git", "docs", "tests", ".ipynb*", "*.md", ".pytest_cache", "venv", ".venv"]
max_line_length = 120
max_complexity = 10
show_source = true
import_order_style = "google"

[tool.flakehell.plugins]
"flake8-*" = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*", "-E203"]
mccabe = ["+*"]
